Further fixes on main section on mobile

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ a:hover {
   }
 
   .top p {
-    padding-top: 15%;
+    padding-top: 10%;
     font-size: 160px;
     line-height: 1.2;
   }
